--- a/bower.json
+++ b/bower.json
@@ -4,19 +4,23 @@
   "dependencies": {
     "restangular": "~1.5.1",
     "angular-ui-router": "~0.2.15",
-    "angular-material": "~1.0.0",
+    "angular-material": "^1.0.0",
     "material-design-iconfont": "~0.0.2",
     "malarkey": "yuanqing/malarkey#~1.3.1",
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
-    "angular": "~1.5.3"
+    "angular": "~1.5.3",
+    "angular-animate": "1.5.3",
+    "angular-messages": "^1.6.0",
+    "a0-angular-storage": "^0.0.15",
+    "angular-jwt": "^0.1.8",
+    "angular-bootstrap": "^2.3.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
   },
   "resolutions": {
-
     "angular": "~1.5.3"
   }
 }
