Added all files to git

--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "API_EP": "http://localhost:3009/v1"
+    "API_EP": "http://localhost:3000/api"
   },
   "staging": {
     "API_EP": "https://todolist-backend.herokuapp.com"
